[metadata]
# replace with your username:
name = PySPG
author=Claudio J. Tessone
author_email=claudio.tessone@uzh.ch
url=https://github.com/tessonec/PySPG
version=5.0.0
description=Python Systematic Parameter Generator
long_description=file: README
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    Environment :: Console
    Natural Language :: English
    Topic :: Scientific/Engineering :: Information Analysis',
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules



